@@ -70,6 +70,7 @@ namespace QuantLib {
             || (y == 2020 && d == 1 && m == January)
             || (y == 2021 && d == 1 && m == January)
             || (y == 2022 && d == 3 && m == January)
+            || (y == 2023 && d == 2 && m == January)
             // Chinese New Year
             || (y == 2004 && d >= 19 && d <= 28 && m == January)
             || (y == 2005 && d >=  7 && d <= 15 && m == February)
@@ -92,8 +93,8 @@ namespace QuantLib {
             || (y == 2019 && d >= 4 && d <= 8 && m == February)
             || (y == 2020 && (d == 24 || (d >= 27 && d <= 31)) && m == January)
             || (y == 2021 && (d == 11 || d == 12 || d == 15 || d == 16 || d == 17) && m == February)
-            || (y == 2022 && ((d == 31 && m == January) ||
-                              (d <= 4 && m == February)))
+            || (y == 2022 && ((d == 31 && m == January) || (d <= 4 && m == February)))
+            || (y == 2023 && d >= 23 && d <= 27 && m == January)
             // Ching Ming Festival
             || (y <= 2008 && d == 4 && m == April)
             || (y == 2009 && d == 6 && m == April)
@@ -110,6 +111,7 @@ namespace QuantLib {
             || (y == 2020 && d == 6 && m == April)
             || (y == 2021 && d == 5 && m == April)
             || (y == 2022 && d >= 4 && d <= 5 && m == April)
+            || (y == 2023 && d == 5 && m == April)
             // Labor Day
             || (y <= 2007 && d >= 1 && d <= 7 && m == May)
             || (y == 2008 && d >= 1 && d <= 2 && m == May)
@@ -129,6 +131,7 @@ namespace QuantLib {
             || (y == 2020 && (d == 1 || d == 4 || d == 5) && m == May)
             || (y == 2021 && (d == 3 || d == 4 || d == 5) && m == May)
             || (y == 2022 && d >= 2 && d <= 4 && m == May)
+            || (y == 2023 && d >= 1 && d <= 3 && m == May)
             // Tuen Ng Festival
             || (y <= 2008 && d == 9 && m == June)
             || (y == 2009 && (d == 28 || d == 29) && m == May)
@@ -145,6 +148,7 @@ namespace QuantLib {
             || (y == 2020 && d >= 25 && d <= 26 && m == June)
             || (y == 2021 && d == 14 && m == June)
             || (y == 2022 && d == 3 && m == June)
+            || (y == 2023 && d >= 22 && d <= 23 && m == June)
             // Mid-Autumn Festival
             || (y <= 2008 && d == 15 && m == September)
             || (y == 2010 && d >= 22 && d <= 24 && m == September)
@@ -158,6 +162,7 @@ namespace QuantLib {
             || (y == 2019 && d == 13 && m == September)
             || (y == 2021 && (d == 20 || d == 21) && m == September)
             || (y == 2022 && d == 12 && m == September)
+            || (y == 2023 && d == 29 && m == September)
             // National Day
             || (y <= 2007 && d >= 1 && d <= 7 && m == October) 
             || (y == 2008 && ((d >= 29 && m == September) ||
@@ -177,6 +182,7 @@ namespace QuantLib {
             || (y == 2020 && d >= 5 && d <= 8 && m == October)
             || (y == 2021 && (d == 1 || d == 4 || d == 5 || d == 6 || d == 7) && m == October)
             || (y == 2022 && d >= 3 && d <= 7 && m == October)
+            || (y == 2023 && d >= 2 && d <= 6 && m == October)
             // 70th anniversary of the victory of anti-Japaneses war
             || (y == 2015 && d >= 3 && d <= 4 && m == September)
             )
@@ -324,7 +330,15 @@ namespace QuantLib {
             Date(24, April, 2022),
             Date(7, May, 2022),
             Date(8, October, 2022),
-            Date(9, October, 2022)
+            Date(9, October, 2022),
+            // 2023
+            Date(28, January, 2023),
+            Date(29, January, 2023),
+            Date(23, April, 2023),
+            Date(6, May, 2023),
+            Date(25, June, 2023),
+            Date(7, October, 2023),
+            Date(8, October, 2023)
         };
         static const Size n =
             sizeof(working_weekends)/sizeof(working_weekends[0]);
